--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   publish = ".dist"
-  command = "npx js.new build"
+  command = "mkdir .dist && npx js.new build"
 
 [[redirects]]
   from = "/*"
